@@ -1,4 +1,4 @@
-- remote_form_for(@account) do |f|
+- remote_form_for(@account, :html => one_submit_only(:account)) do |f|
   = link_to_close new_account_path
   = hidden_field_tag "account[user_id]", @current_user.id
   = f.error_messages
@@ -6,7 +6,7 @@
   = render :partial => "accounts/contact_info", :locals => { :f => f }
   = render :partial => "accounts/permissions",  :locals => { :f => f }
   .buttonbar
-    = f.submit "Create Account" 
+    = f.submit "Create Account"
     or 
     = link_to_cancel new_account_path
     
