@@ -1,5 +1,5 @@
 .remote
-  - remote_form_for(@account) do |f|
+  - remote_form_for(@account, :html => one_submit_only(:account)) do |f|
     = link_to_close edit_account_path(@account)
     = f.hidden_field :user_id
     = f.error_messages
@@ -7,6 +7,6 @@
     = render :partial => "accounts/contact_info", :locals => { :f => f, :edit => true }
     = render :partial => "accounts/permissions",  :locals => { :f => f, :edit => true }
     .buttonbar
-      = f.submit "Save Account" 
+      = f.submit "Save Account"
       or 
       = link_to_cancel edit_account_path(@account)
