@@ -1,5 +1,5 @@
 .remote
-  - remote_form_for([:admin, @user]) do |f|
+  - remote_form_for([:admin, @user], :html => one_submit_only(:user)) do |f|
     = link_to_close edit_admin_user_path(@user)
     = f.error_messages
     = render :partial => "admin/users/profile", :locals => { :f => f, :edit => true }
