@@ -1,13 +1,0 @@
-.title Edit #{@user.full_name}
-%p
-:erb
-  <% form_for([ :admin, @user ]) do |f| %>
-    <%= f.error_messages %>
-
-    <p>
-      <%= f.submit 'Update' %>
-    </p>
-  <% end %>
-
-  <%= link_to 'Show', admin_user_path(@user) %> |
-  <%= link_to 'Back', admin_users_path %>
