@@ -13,7 +13,7 @@
 .standalone#standalone
   -# The following form gets submitted to #create when @authentication is nil,
   -# or to #update when @authentication is not nil (ex. suspended).
-  - form_for @authentication, :url => authentication_path do |f|
+  - form_for @authentication, :url => authentication_path, :html => one_submit_only(:authentication) do |f|
     - if can_signup?
       .title_tools== Don't have an account? #{link_to 'Sign Up Now!', signup_path}
     .title Login
