@@ -1,5 +1,5 @@
 .remote
-  - remote_form_for(@campaign) do |f|
+  - remote_form_for(@campaign, :html => one_submit_only(:campaign)) do |f|
     = link_to_close edit_campaign_path(@campaign)
     = f.hidden_field :user_id
     = f.error_messages
