@@ -1,5 +1,5 @@
 .remote
-  - remote_form_for(@contact) do |f|
+  - remote_form_for(@contact, :html => one_submit_only(:contact)) do |f|
     = link_to_close edit_contact_path(@contact)
     = f.hidden_field :user_id
     = f.error_messages
