@@ -1,5 +1,5 @@
 .remote
-  - remote_form_for(@lead, :url => promote_lead_path(@lead)) do |f|
+  - remote_form_for(@lead, :url => promote_lead_path(@lead), :html => one_submit_only(:lead)) do |f|
     = link_to_close convert_lead_path(@lead)
     - fields_for(@account) do |a|
       = a.hidden_field :user_id
