@@ -1,4 +1,4 @@
-- remote_form_for(@lead) do |f|
+- remote_form_for(@lead, :html => one_submit_only(:lead)) do |f|
   = link_to_close new_lead_path
   = hidden_field_tag "campaign", "#{@campaign.id if @campaign}"
   = hidden_field_tag "lead[user_id]", @current_user.id
