@@ -1,5 +1,5 @@
 .remote
-  - remote_form_for(@lead) do |f|
+  - remote_form_for(@lead, :html => one_submit_only(:lead)) do |f|
     = link_to_close edit_lead_path(@lead)
     = f.hidden_field :user_id
     = f.error_messages
