@@ -1,5 +1,5 @@
 .remote
-  - remote_form_for(@opportunity) do |f|
+  - remote_form_for(@opportunity, :html => one_submit_only(:opportunity)) do |f|
     = link_to_close edit_opportunity_path(@opportunity)
     = f.hidden_field :user_id
     = f.hidden_field :campaign_id
