@@ -1,4 +1,4 @@
-- remote_form_for(@task) do |f|
+- remote_form_for(@task, :html => one_submit_only(:task)) do |f|
   = link_to_close new_task_path + "?view=#{@view}"
   = hidden_field_tag :view, @view
   = hidden_field_tag "task[user_id]", @current_user.id
