@@ -1,5 +1,5 @@
 .remote
-  - remote_form_for(@task) do |f|
+  - remote_form_for(@task, :html => one_submit_only(:task)) do |f|
     = link_to_close edit_task_path(@task)
     = hidden_field_tag :view, @view
     = hidden_field_tag "task[asset_id]", "#{@asset.id if @asset}"
