@@ -4,6 +4,10 @@ It does not matter how slowly you go as long as you do not stop.
 First they ignore you, then they laugh at you, then they fight you,
 then you win. –- Mahatma Gandhi
 
+Fri, Oct 9, 2009
+---------------------------------------------------------------------
+- Prevent multiple form submissions by pressing [Submit] button twice.
+
 Wed, Oct 7, 2009
 ---------------------------------------------------------------------
 - Moved [uses_user_permission] code from plugin to core library.
